# meeting-action-taker

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/integrations/: mod.rs  notion.rs  trello.rs
src-tauri/src/storage/: mod.rs
src/components/: ActionItems.jsx  AudioRecorder.jsx  ImageArchives.jsx  ImageUpload.jsx  Settings.jsx  VideoArchives.jsx
